--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
                 <div class="input-group">
                     <div class="input-box">
-                        <label for="firstname">Primeiro nome</label>
+                        <label for="firstname">Nome</label>
                         <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
 
                     </div>
              
                     <div class="input-box">
-                        <label for="lastname">Último nome</label>
+                        <label for="lastname">Sobrenome</label>
                         <input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
 
                     </div>
